# trendmarketv2

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  .yamllint.yml  AGENTS.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  dbt_project.yml  docker-compose.sut.yml  package-lock.json  package.json  pyproject.toml  requirements-actions-lock.txt  requirements-dev.txt  yaml_fallback.py
.github/: CODEOWNERS  actions.metadata.json  pull_request_template.md
.sprint/: deliverables.yml  filemap.yml  gates.yml
analytics/: dbt_project.yml
api/: openapi.yaml
benches/: dec_benches.rs  dec_paths.rs  match_core.rs  twap_update.rs
configs/: shadow.env
docs/: REPRO.md  Storyboard.md
engine/: Cargo.toml
engine/benches/: route_fast.rs
engine/src/amm_obs/: __init__.py  extras.py  release.py  telemetry.py
fixtures/: market_depth.json  moderation_events.csv  orders_burst.csv  orders_gap.csv  orders_spike.csv  simulation_runs.csv
hypothesis/: __init__.py  strategies.py
hypx_local/: __init__.py  strategies.py
jsonschema/: __init__.py  __main__.py  boss_final.report.json  boss_final.report.schema.json
models/: example.sql
nacl/: __init__.py  exceptions.py  signing.py
observability/: README.md  catalog.yaml
ops/: watchers.yml
s5_validation/: checks_table.md  code_ast_findings.json  dbt_findings.json  decision.txt  findings.json  hygiene_report.txt  labels_fix_report.md  manifest.json  obs_findings.json  openapi_findings.json  placeholder_audit.md  schemas_findings.json  summary.md  workflow_findings.json
(+553 files in other folders)
