[project]
name = "trendmarketv2-oracle-s7"
version = "0.1.0"
description = "Sprint S7 canonical pipeline tools"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "jsonschema>=4.21,<4.26",
  "pynacl>=1.5,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-json-report>=1.5,<2.0",
  "hypothesis>=6.112,<7.0",
  "yamllint>=1.35,<2.0",
  "gitleaks>=8.18,<9.0"
]

[tool.pytest.ini_options]
addopts = "-q"
