[package]
name = "trendmarketv2"
version = "0.1.0"
edition = "2021"

[lib]
name = "trendmarketv2"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dec_benches"
harness = false

[[bench]]
name = "dec_paths"
harness = false

[[bench]]
name = "match_core"
harness = false

[[bench]]
name = "route_fast"
harness = false

[[bench]]
name = "twap_update"
harness = false
